--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "copyfiles": "^2.4.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mustache-express": "^1.3.2",
     "nodemon": "^3.1.11"
   },
-  "scripts": {
-    "dev": "tsx watch src/server.ts"
+  "engines": {
+    "node": ">=18.0.0"
   },
+ "scripts": {
+"start-dev": "tsx watch src/server.ts",
+  "build": "tsc && copyfiles -u 1 \"src/views/**/*.mustache\" \"src/public/**/*\" dist",
+  "start": "yarn build && node dist/server.js"
+},
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/mustache-express": "^1.2.5",
